--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@intercom/messenger-js-sdk": "^0.0.18",
     "@mobile-app-designer/shared-types": "file:./packages/shared-types",
     "@stripe/react-stripe-js": "^5.3.0",
     "@stripe/stripe-js": "^8.4.0",
