Add new icons to spec icons

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "prebuild": "npm run type-check",
+    "prebuild": "npm run type-check && npm run assets:sync",
     "build:analyze": "ANALYZE=true npm run build",
     "build:production": "NODE_ENV=production npm run build && npm run compress",
     "compress": "node scripts/compress-build.js",
+    "assets:sync": "node scripts/sync-public-assets.js",
     "dev": "next dev -p 3001",
+    "predev": "npm run assets:sync",
     "dev:safe": "npm run type-check && npm run dev",
     "dev:clean": "rm -rf .next .turbo node_modules/.cache && npm run dev",
     "lint": "next lint",
