--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "compression": "^1.8.1",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "express": "^5.1.0",
     "form-data": "^4.0.4",
